--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "eleventy --serve",
     "mp3": "cd src/mp3 && rsync --archive --compress --progress  --delete --delete-excluded --exclude .DS_Store . krachbau@krachbau.com:krachbau.com/audio/",
     "site": "cd dist && rsync --archive --compress --exclude audio . krachbau@krachbau.com:krachbau.com/",
-    "deploy": "npm run site && npm run mp3"
+    "deploy": "npm run mp3 && npm run site"
   },
   "keywords": [],
   "author": "",
